# rust

./: Cargo.toml
1.2_hellow_word/: Cargo.toml
10.1_generics/: Cargo.toml
11.1_adder/src/: lib.rs
12.1_minigrep/: Cargo.toml
12.1_minigrep/src/: main.rs
13.2_iterator/: Cargo.toml
15.1_smart_point/: Cargo.toml
16.1_concurrency/: Cargo.toml
18.1_matchs2/: Cargo.toml
18.1_matchs2/src/: main.rs
19.1_advance/: Cargo.toml
19.1_advance/hello_macro_derive/: Cargo.toml
20.1_web_server/src/: main.rs
3.1_variables/src/: main.rs
3.3_functions/src/: main.rs
3.5_branches/: Cargo.toml
3.5_branches/src/: main.rs
4.1_ownership/: Cargo.toml
4.1_ownership/src/: main.rs
4.3_slices/src/: main.rs
5.1_structure/: Cargo.toml
5.1_structure/src/: main.rs
5.2_rectangles/src/: main.rs
6.1_enumerations/: Cargo.toml
6.1_enumerations/src/: main.rs
6.2_matchs/src/: main.rs
9.1_panic/: Cargo.toml
9.1_panic/src/: main.rs
adder/: Cargo.toml
adder/src/: lib.rs
advance/: Cargo.toml
advance/hello_macro/: Cargo.toml
branches/src/: main.rs
closures/: Cargo.toml
closures/src/: main.rs
collections/: Cargo.toml
concurrency/src/: main.rs
cookbook/: Cargo.toml
enumerations/src/: main.rs
example/: Cargo.toml
example/cast/: Cargo.toml
example/display/: Cargo.toml
example/enumerate/: Cargo.toml
example/list/: Cargo.toml
functions/: Cargo.toml
functions/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
iterator/src/: main.rs
matchs/: Cargo.toml
matchs/src/: main.rs
matchs2/src/: main.rs
minigrep/src/: lib.rs  main.rs
my-project/: Cargo.toml
my_crate/: Cargo.toml
my_crate/src/: lib.rs  main.rs
oo/: Cargo.toml
oo/src/: lib.rs  (+1 more)
panic/: Cargo.toml
rectangles/: Cargo.toml
restaurant/: Cargo.toml
slice/: Cargo.toml
traits/: Cargo.toml
variables/: Cargo.toml
web_server/: Cargo.toml
(+16 files in other folders)
