[workspace]
members = [
    "1.2_hellow_word",
    "2.1_guessing_game",
    "3.1_variables",
    "3.3_functions",
    "3.5_branches",
    "4.1_ownership",
    "4.3_slices",
    "5.1_structure",
    "5.2_rectangles",
    "6.1_enumerations",
    "6.2_matchs",
    "7.1_restaurant",
    "8.1_collections",
    "9.1_panic",
    "10.1_generics",
    "10.2_traits",
    "11.1_adder",
    "12.1_minigrep",
    "13.1_closures",
    "13.2_iterator",
    "15.1_smart_point",
    "16.1_concurrency",
    "17.1_oo",
    "18.1_matchs2",
    "19.1_advance",
    "20.1_web_server",
    "example",
]
