[package]
name = "advance"
version = "0.1.0"
authors = ["liyunteng <li_yunteng@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]
name = "advance"

[dependencies]
hello_macro = { path = "hello_macro" }
hello_macro_derive = { path = "hello_macro_derive" }
